objects/ErrorLog__c.object
<CustomObject>
    <fields>
        <fullName>ErrorClass__c</fullName>
        <label>ErrorClass</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErrorId__c</fullName>
        <label>ErrorId NEw Test Blabla</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErrorMessage__c</fullName>
        <label>ErrorMessage</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>ErrorLog</relationshipLabel>
        <relationshipName>ErrorLog</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ErrorLog</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>ErrorLog-Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ErrorLog</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>